Update documentation for alpha